--- a/public/css/sections/0-header.css
+++ b/public/css/sections/0-header.css
@@ -45,7 +45,7 @@
 }
 
 #home .social {
-  margin: 18px 0 24px 0;
+  margin: 18px 0 24px;
   font-size: 36px;
   line-height: 36px;      
 }
@@ -80,7 +80,6 @@
 @media only screen and (min-width: 961px){
   #home {
     position: relative;
-    /* height: 800px; */
     min-height: 800px !important;
     width: 100%;
     background: #161415 url(../../images/header-background.jpg) no-repeat top center;
@@ -94,25 +93,6 @@
   }
   
   
-  /* vertically center banner section */
-  #home:before {
-    content: "";
-    display: inline-block;
-    vertical-align: middle;
-    height: 100%;
-  }
-  #home .banner {
-    display: inline-block;
-    vertical-align: middle;
-    margin: 0 auto;
-    width: 85%;
-    padding-bottom: 30px;
-    text-align: center;
-  }
-  
-  #home .banner-text {
-    width: 100%;
-  }
   #home .banner-text h1 {
     font: 90px/1.1em "opensans-bold", sans-serif;
     color: #fff;
@@ -144,14 +124,7 @@
     font-size: 30px;
     text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.8);
   }
-  #home .social li {
-    display: inline-block;
-    margin: 0 15px;
-    padding: 0;
-  }
-  #home .social li a {
-    color: #fff;
-  }
+
   #home .social li a:hover {
     color: #11abb0;
   }
@@ -160,7 +133,7 @@
   #home .scrolldown {
     position: absolute;
     left: 50%;
-    bottom: 0px;
+    bottom: 0;
     margin-left: -28px !important;
   }
 }
